# read_wasm

./: .gitignore  Cargo.toml  Dockerfile  README.md  add.wasm  add.wat  block.wasm  block.wat  code_section  docker-compose.yml  export_section  hello_world.wasm  hello_world.wat  hoge.wat  import_func.wasm  imprt.wasm  memorysec.wasm  section0  type_section  vm.json  vm.serialized
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs
src/binary/: code.rs  code_sec.rs  data_sec.rs  export_sec.rs  func_sec.rs  global_sec.rs  import_sec.rs  instructions.rs  memory_sec.rs  mod.rs  section.rs  table_sec.rs  type_sec.rs  value_type.rs  wasm.rs
src/exec/: block_frame.rs  exec_machine.rs  frame.rs  func_instance.rs  import.rs  mod.rs  op.rs  store.rs  value.rs  wasi.rs
src/server/: client.rs  server.rs
tests/: spec.rs  wast.rs
tests/mytestsuite/: block.wat  data.wat  datasec.wat  hello_world.wat  import.wat  memorysec.wat
tests/testsuite/: add.wat  block_table.wat  func.wat  global.wat  globalsec.wat  i32store.wat  i64store.wat  import_func.wat  memorysec.wat  tablesec.wat  typesec.wat
