[package]
name = "read-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-ucx = "0.1.1"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
nix = "0.29.0"
nom = "7.1.3"
nom-leb128 = "0.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_closure = "0.3.3"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
wat = "1.209.1"
