[package]
name = "read-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ucx = ["async-ucx"]

[dependencies]
anyhow = "1.0.82"
async-tempfile = "0.6.0"
async-ucx = { version="0.1.1", optional = true }
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
nix = "0.29.0"
nom = "7.1.3"
nom-leb128 = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_closure = "0.3.3"
serde_json = "1.0.117"
tempfile = "3.12.0"
tokio = { version = "1.38.0", features = ["full"] }
wat = "1.209.1"
